actualizacion de spatie
