# routes/api.php
@@ -1,6 +1,7 @@
 <?php
 
 use App\Http\Controllers\AuthController;
+use App\Http\Controllers\ClientController;
 use App\Http\Controllers\ProjectController;
 use App\Http\Controllers\TaskController;
 use Illuminate\Http\Request;
@@ -23,4 +24,13 @@ Route::put('task/{task}', [TaskController::class, 'update']);
 Route::delete('task/{task}', [TaskController::class, 'destroy']);
 
 Route::post('/login', [AuthController::class, 'login']);
-Route::post('/logout', [AuthController::class, 'logout'])->middleware('auth:sanctum');
+
+Route::middleware('auth:sanctum')->group(function () {
+    Route::post('/logout', [AuthController::class, 'logout']);
+
+    Route::get('/client', [ClientController::class, 'index'])->middleware('permission:index');
+    Route::post('/client', [ClientController::class, 'store'])->middleware('permission:create');
+    Route::get('/client/{id}', [ClientController::class, 'show'])->middleware('permission:show');
+    Route::put('/client/{id}', [ClientController::class, 'update'])->middleware('permission:update');
+    Route::delete('/client/{id}', [ClientController::class, 'destroy'])->middleware('permission:destroy');
+});
